# nuxbt_plus_hhh

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo.py  nfpm.yaml  pyproject.toml  template_vagrantfile  vagrant_setup.py
.github/: FUNDING.yml
.github/workflows/: bump_version.yml  ci.yml  release.yml
debian/: changelog  control  install  nuxbt.desktop  nuxbt.links  rules
docs/: Analog Stick Input.md  Improvement-Notes-ko.md  Macros.md  Miscellaneous Notes.md  QUICKSTART-ko.md  Release-Notes-Draft-ko.md  Usage-Guide-ko.md  User-Guide-Improvements.md  Windows-and-macOS-Installation.md
nuxbt/: __init__.py  agent.py  bluez.py  cli.py  gui.py  logging.py  nuxbt.py  tui.py
nuxbt/controller/: controller.py  input.py  server.py
nuxbt/web/: app.py
nuxbt/web/client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nuxbt/web/client/src/: App.tsx  defaults.ts  socket.ts  types.ts
nuxbt/web/client/src/components/: ControllerInput.tsx  ControllerVisual.tsx  KeyBindings.tsx  MacroControls.test.tsx  MacroControls.tsx  ThemeToggle.tsx
nuxbt/web/static/css/: main.css
nuxbt/web/static/js/: main.js
scripts/: build_deb.sh  build_ppa_source.sh  crash_switch.py  demo_loop.py  host_usb_bridge.py  proxy.py  reconnect_proxy.py  reconnect_test.py  start_macos_vm_webapp.sh  switch_emu.py  testbt.py
tests/: conftest.py  test_cli.py  test_keybinds.py  test_macro_categories.py  test_macro_hold.py  test_nuxbt.py  test_tui.py  test_webapp_macro.py
